Bajen esto cabros

--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d0a10c2253c4184bb563f222bd1de0f",
+       "model_id": "1448d1d3ce2841c4b226b73601ed669d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93d9c990d64c4f94a6d637b2205efc0d",
+       "model_id": "bb8b16ea78054c67a9a23f381a72b931",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,117 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>density</th>\n",
-       "      <th>energy_per_atom</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>15.328048</td>\n",
-       "      <td>-9.380040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.254408</td>\n",
-       "      <td>-7.181836</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7.226515</td>\n",
-       "      <td>-9.402674</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9.900044</td>\n",
-       "      <td>-3.924228</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>14.349848</td>\n",
-       "      <td>-10.819573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154713</th>\n",
-       "      <td>4.126039</td>\n",
-       "      <td>-7.556099</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154714</th>\n",
-       "      <td>4.185159</td>\n",
-       "      <td>-7.550304</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154715</th>\n",
-       "      <td>2.658641</td>\n",
-       "      <td>-5.909499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154716</th>\n",
-       "      <td>2.834136</td>\n",
-       "      <td>-5.876083</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154717</th>\n",
-       "      <td>2.653652</td>\n",
-       "      <td>-5.855822</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>154718 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          density  energy_per_atom\n",
-       "0       15.328048        -9.380040\n",
-       "1        4.254408        -7.181836\n",
-       "2        7.226515        -9.402674\n",
-       "3        9.900044        -3.924228\n",
-       "4       14.349848       -10.819573\n",
-       "...           ...              ...\n",
-       "154713   4.126039        -7.556099\n",
-       "154714   4.185159        -7.550304\n",
-       "154715   2.658641        -5.909499\n",
-       "154716   2.834136        -5.876083\n",
-       "154717   2.653652        -5.855822\n",
-       "\n",
-       "[154718 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -186,12 +78,12 @@
     "\n",
     "df_long = df[[\"density\",\"energy_per_atom\"]]\n",
     "\n",
-    "df_long"
+    "df_long.to_csv(\"mat_doc.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -226,6 +118,102 @@
     "plt.hist(df_long[\"energy_per_atom\"],bins=50)\n",
     "plt.xlabel(\"Energy per atom\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>density</th>\n",
+       "      <th>energy_per_atom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>154718.000000</td>\n",
+       "      <td>154718.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.140905</td>\n",
+       "      <td>-6.265759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.761268</td>\n",
+       "      <td>1.862117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.020144</td>\n",
+       "      <td>-18.488548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.187203</td>\n",
+       "      <td>-7.585424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4.448522</td>\n",
+       "      <td>-6.516871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.564731</td>\n",
+       "      <td>-5.103024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>26.581336</td>\n",
+       "      <td>-0.000760</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             density  energy_per_atom\n",
+       "count  154718.000000    154718.000000\n",
+       "mean        5.140905        -6.265759\n",
+       "std         2.761268         1.862117\n",
+       "min         0.020144       -18.488548\n",
+       "25%         3.187203        -7.585424\n",
+       "50%         4.448522        -6.516871\n",
+       "75%         6.564731        -5.103024\n",
+       "max        26.581336        -0.000760"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_long.describe()"
    ]
   }
  ],
