--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "6d381122-ee51-4227-a407-e1ddd69367d3",
    "metadata": {},
    "outputs": [],
@@ -67,10 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "849cd005-8429-4edd-9a5f-6aa6e62273d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7bac5caf839e4712a98a3b89eb897a36",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Retrieving ThermoDoc documents:   0%|          | 0/154718 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#Fabian#\n",
     "with MPRester(api_key) as mpr:\n",
@@ -80,7 +95,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "df_thermo = pd.DataFrame([material.__dict__ for material in thermo_doc])\n",
-    "df_thermo = df_mat[properties_thermo]\n",
+    "df_thermo = df_thermo[properties_thermo]\n",
     "df_thermo.to_csv(\"thermo_doc\")"
    ]
   },
@@ -99,7 +114,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "df_electro = pd.DataFrame([material.__dict__ for material in electronic_doc])\n",
-    "df_electro = df_mat[properties_electro]\n",
+    "df_electro = df_electro[properties_electro]\n",
     "df_electro.to_csv(\"electronic_doc\")"
    ]
   },
@@ -137,7 +152,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "df_dielectric = pd.DataFrame([material.__dict__ for material in dielectric_doc])\n",
-    "df_dielectric = df_mat[properties_dielectric]\n",
+    "df_dielectric = df_dielectric[properties_dielectric]\n",
     "df_dielectric.to_csv(\"dielectric_doc\")"
    ]
   },
@@ -156,7 +171,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "df_oxidation_states = pd.DataFrame([material.__dict__ for material in oxidation_states_doc])\n",
-    "df_oxidation_states = df_mat[properties_oxidate_states]\n",
+    "df_oxidation_states = df_oxidation_states[properties_oxidate_states]\n",
     "df_oxidation_states.to_csv(\"oxidation_states_doc\")"
    ]
   }
