--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1351,12 +1351,50 @@
    "metadata": {},
    "source": [
     "# Inquietudes a responder\n",
-    " - ¿Podemos predecir el comportamiento de un material sin experimentar con el?\n",
+    "- ¿Podemos predecir el comportamiento de un material sin experimentar con el?\n",
     "- ¿Podemos encontrar nuevos patrones en materiales aparentemente distintos?\n",
     "- ¿Podemos clasificar los materiales sin saber nada de física?\n",
-    "-¿Podemos encontrar materiales extraños, por ejemplo, material mágnetico que no sea metálico? \n",
-    "\n"
+    "- ¿Podemos encontrar materiales extraños, por ejemplo, material mágnetico que no sea metálico? \n",
+    "- ¿Podemos identificar una caracteristica que influya en lo bueno que puede ser un conductor?\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "- Estrategia para responder la Pregunta 5\n",
+    "- Primero, vamos a filtrar a todos los conductores usando el atributo band_gap  = 0 , esto pues se sabe que todos los conductores tienen este valor. Los semiconductores tienen un bandgap > 0 y los aislantes tienen band gap mucho mas grande. La siguiente imagen ejemplifica un material con band gap = 0 . \n",
+    "\n",
+    "- Notar como en el grafico de la derecha, que muestra la densidad de estados, no hay saltos en la función de color rojo.\n",
+    "\n",
+    "![Material con band gap = 0](band_gap1.png)\n",
+    "\n",
+    "- El siguiente material tiene un band gap distinto de cero, osea, los electrones necesitan un \"empujoncito\" para pasar de un estado ligado al estado libre de un conductor. Este empujoncito se puede conseguir con una diferencia de potencial o con el efecto túnel. Aquí la función roja no es contínua en todo el espacio, especificamente alrededor de 0.\n",
+    "\n",
+    "![Material con band gap != 0](bandgap2.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Luego, debido a que no tenemos labels, clasificar no tendría sentido. Por esta razón , se realizará un clustering.\n",
+    "- Primero, se probará con k-means . Para inspeccionar la cantidad idónea de clusters, primero se realizará la técnica del codo.\n",
+    "- Con la cantidad de clusters obtenida, se realizará k-means. \n",
+    "- También se probará con DBSCAN. La intuición física nos dice que no servirá mucho, pues la densidad de puntos no debería ser un factor de clasificación.\n",
+    "- El cluster que nos interesa es el jerárquico, pues queremos indentificar que tan buenos son los conductores. Queremos identificar alguna característica que tenga un gradiente que coincida con la forma en la que se agrupan los clusters. Una forma de visualizar esto sería algo como esto:\n",
+    "\n",
+    "![EJEMPLO_CLUSTER](CLUSTER.png)\n",
+    "\n",
+    "Notar como los puntos se vuelven mas rojos a medida que nos acercamos al centro, una especie de gradiente hacia el centro nos podría indicar que esta característica influye directamente en lo bueno (o malo) que es un conductor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
