--- a/Reporte.ipynb
+++ b/Reporte.ipynb
@@ -9,7 +9,7 @@
     "- Sebastian Monteiro \n",
     "- Simón Campos Rojas \n",
     "- Dylan Riquelme  \n",
-    "- Benjamín Mancilla\n",
+    "- Benjamín Mancilla XD\n",
     "\n",
     "## Introducción: Problema y Motivación\n",
     "La ciencia de materiales es un campo en constante evolución que desempeña un papel fundamental en la creación de tecnologías innovadoras y en la mejora de los materiales existentes para una amplia gama de aplicaciones. En este contexto, la minería de datos emerge como una poderosa herramienta que nos permite desentrañar patrones, descubrir relaciones y extraer información valiosa a partir de vastos conjuntos de datos relacionados con materiales.\n",
@@ -293,36 +293,290 @@
    "metadata": {},
    "source": [
     "Notar que cada columna es un atributo físico de los materiales. Al hacer merge, algunos materiales ya no aparecen en la lista, se redujo la cantidad de filas de ~150.000 a ~7.000. \n",
-    "Esto se produjo porque para el dataset de materiales dieléctricos no están los cálculos de todos Este análisis se realiza para poder hacer una mirada superficial a las matrices de covarianza, correlación y stats varias. Más adelante es posible que se trabaje con los dataframes por separado debido a la variedad de estructura entre los distintos materiales, o también de alguna forma establecer una estructura universal para poder realizar el merge, pero no perdiendo una cantidad de datos tan grandes."
+    "Esto se produjo porque para el dataset de materiales dieléctricos no están los cálculos de los atributos para todos los materiales.\n",
+    "\n",
+    "Este análisis se realiza para poder hacer una mirada superficial a las matrices de covarianza, correlación y stats varias. Más adelante es posible que se trabaje con los dataframes por separado debido a la variedad de estructura entre los distintos materiales, o también de alguna forma establecer una estructura universal para poder realizar el merge, pero no perdiendo una cantidad de datos tan grandes."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se obtienen 22 columnas al hacer merge entre los dataframes.\n"
+    "## 3.- Estadísticas de los datos"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Algo que notar de este análisis estadístico es la presencia de outliers en los atributos e_total , e_ionic , e_electronic y n tienen percentiles y maximos muy distantes, como también una desviación estándar mas alta. Análisis posteriores darán mas luz sobre que hacer con estos outliers."
+    "A continuación se muestra la descripción de los datos."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>e_total</th>\n",
+       "      <th>e_ionic</th>\n",
+       "      <th>e_electronic</th>\n",
+       "      <th>n</th>\n",
+       "      <th>band_gap</th>\n",
+       "      <th>efermi</th>\n",
+       "      <th>exchange_symmetry</th>\n",
+       "      <th>num_magnetic_sites</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>density</th>\n",
+       "      <th>density_atomic</th>\n",
+       "      <th>energy_per_atom</th>\n",
+       "      <th>formation_energy_per_atom</th>\n",
+       "      <th>equilibrium_reaction_energy_per_atom</th>\n",
+       "      <th>decomposition_enthalpy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "      <td>4647.000000</td>\n",
+       "      <td>7290.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>50.920612</td>\n",
+       "      <td>32.398492</td>\n",
+       "      <td>18.522120</td>\n",
+       "      <td>2.436020</td>\n",
+       "      <td>2.336182</td>\n",
+       "      <td>1.724809</td>\n",
+       "      <td>94.329081</td>\n",
+       "      <td>0.560494</td>\n",
+       "      <td>289.837992</td>\n",
+       "      <td>4.402732</td>\n",
+       "      <td>18.878844</td>\n",
+       "      <td>-5.782469</td>\n",
+       "      <td>-1.733503</td>\n",
+       "      <td>-0.125225</td>\n",
+       "      <td>-0.075678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1655.107848</td>\n",
+       "      <td>1487.919679</td>\n",
+       "      <td>625.658741</td>\n",
+       "      <td>3.549444</td>\n",
+       "      <td>1.697134</td>\n",
+       "      <td>2.388488</td>\n",
+       "      <td>76.760838</td>\n",
+       "      <td>1.642730</td>\n",
+       "      <td>221.638154</td>\n",
+       "      <td>1.862653</td>\n",
+       "      <td>8.587621</td>\n",
+       "      <td>1.714053</td>\n",
+       "      <td>0.982938</td>\n",
+       "      <td>0.348267</td>\n",
+       "      <td>0.316180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.155248</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-64.837332</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-7.804680</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.286588</td>\n",
+       "      <td>0.023670</td>\n",
+       "      <td>5.643294</td>\n",
+       "      <td>-11.047931</td>\n",
+       "      <td>-4.491319</td>\n",
+       "      <td>-4.427975</td>\n",
+       "      <td>-4.427975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.931442</td>\n",
+       "      <td>4.000849</td>\n",
+       "      <td>2.940330</td>\n",
+       "      <td>1.714739</td>\n",
+       "      <td>1.003525</td>\n",
+       "      <td>0.215491</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>143.530177</td>\n",
+       "      <td>3.084127</td>\n",
+       "      <td>12.598164</td>\n",
+       "      <td>-7.131346</td>\n",
+       "      <td>-2.500231</td>\n",
+       "      <td>-0.100782</td>\n",
+       "      <td>-0.078266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>11.662250</td>\n",
+       "      <td>6.472804</td>\n",
+       "      <td>4.264421</td>\n",
+       "      <td>2.065047</td>\n",
+       "      <td>1.991500</td>\n",
+       "      <td>1.749932</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>233.974644</td>\n",
+       "      <td>4.129389</td>\n",
+       "      <td>15.950793</td>\n",
+       "      <td>-5.739387</td>\n",
+       "      <td>-1.686184</td>\n",
+       "      <td>-0.041113</td>\n",
+       "      <td>-0.023512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>19.016789</td>\n",
+       "      <td>11.364285</td>\n",
+       "      <td>6.558800</td>\n",
+       "      <td>2.561015</td>\n",
+       "      <td>3.418875</td>\n",
+       "      <td>3.227443</td>\n",
+       "      <td>164.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>367.666530</td>\n",
+       "      <td>5.351808</td>\n",
+       "      <td>23.677849</td>\n",
+       "      <td>-4.422131</td>\n",
+       "      <td>-0.925363</td>\n",
+       "      <td>-0.016220</td>\n",
+       "      <td>0.000381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>126575.316823</td>\n",
+       "      <td>126567.273642</td>\n",
+       "      <td>46857.910510</td>\n",
+       "      <td>216.466881</td>\n",
+       "      <td>12.139100</td>\n",
+       "      <td>11.149808</td>\n",
+       "      <td>230.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>3998.471538</td>\n",
+       "      <td>17.732855</td>\n",
+       "      <td>132.548261</td>\n",
+       "      <td>-0.219326</td>\n",
+       "      <td>5.212425</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.212425</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             e_total        e_ionic  e_electronic            n     band_gap  \\\n",
+       "count    7290.000000    7290.000000   7290.000000  7290.000000  7290.000000   \n",
+       "mean       50.920612      32.398492     18.522120     2.436020     2.336182   \n",
+       "std      1655.107848    1487.919679    625.658741     3.549444     1.697134   \n",
+       "min         1.155248       0.000000    -64.837332     0.000000     0.000000   \n",
+       "25%         7.931442       4.000849      2.940330     1.714739     1.003525   \n",
+       "50%        11.662250       6.472804      4.264421     2.065047     1.991500   \n",
+       "75%        19.016789      11.364285      6.558800     2.561015     3.418875   \n",
+       "max    126575.316823  126567.273642  46857.910510   216.466881    12.139100   \n",
+       "\n",
+       "            efermi  exchange_symmetry  num_magnetic_sites       volume  \\\n",
+       "count  7290.000000        7290.000000         7290.000000  7290.000000   \n",
+       "mean      1.724809          94.329081            0.560494   289.837992   \n",
+       "std       2.388488          76.760838            1.642730   221.638154   \n",
+       "min      -7.804680           1.000000            0.000000    11.286588   \n",
+       "25%       0.215491          15.000000            0.000000   143.530177   \n",
+       "50%       1.749932          72.000000            0.000000   233.974644   \n",
+       "75%       3.227443         164.000000            0.000000   367.666530   \n",
+       "max      11.149808         230.000000           24.000000  3998.471538   \n",
+       "\n",
+       "           density  density_atomic  energy_per_atom  \\\n",
+       "count  7290.000000     7290.000000      7290.000000   \n",
+       "mean      4.402732       18.878844        -5.782469   \n",
+       "std       1.862653        8.587621         1.714053   \n",
+       "min       0.023670        5.643294       -11.047931   \n",
+       "25%       3.084127       12.598164        -7.131346   \n",
+       "50%       4.129389       15.950793        -5.739387   \n",
+       "75%       5.351808       23.677849        -4.422131   \n",
+       "max      17.732855      132.548261        -0.219326   \n",
+       "\n",
+       "       formation_energy_per_atom  equilibrium_reaction_energy_per_atom  \\\n",
+       "count                7290.000000                           4647.000000   \n",
+       "mean                   -1.733503                             -0.125225   \n",
+       "std                     0.982938                              0.348267   \n",
+       "min                    -4.491319                             -4.427975   \n",
+       "25%                    -2.500231                             -0.100782   \n",
+       "50%                    -1.686184                             -0.041113   \n",
+       "75%                    -0.925363                             -0.016220   \n",
+       "max                     5.212425                              0.000000   \n",
+       "\n",
+       "       decomposition_enthalpy  \n",
+       "count             7290.000000  \n",
+       "mean                -0.075678  \n",
+       "std                  0.316180  \n",
+       "min                 -4.427975  \n",
+       "25%                 -0.078266  \n",
+       "50%                 -0.023512  \n",
+       "75%                  0.000381  \n",
+       "max                  5.212425  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "numeric_columns.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notar que los atributos **e_total, e_ionic, e_electronic y n** tienen valores muy extremos, por esto eso que poseen una desviación estándar tan alta. Además, la diferencia entre los valores mínimos y máximos de estos atributos es muy grande, lo que reafirma la dispersión de los datos. Esto se puede ver en los histogramas de cada atributo:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Figuras/Histogramas.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -376,19 +630,67 @@
    "metadata": {},
    "source": [
     "# Inquietudes a responder\n",
-    " - ¿Podemos predecir el comportamiento de un material sin experimentar con el?\n",
-    "- ¿Podemos encontrar nuevos patrones en materiales aparentemente distintos?\n",
-    "- ¿Podemos clasificar los materiales sin saber nada de física?\n",
-    "-¿Podemos encontrar materiales extraños, por ejemplo, material magnético que no sea metálico? \n",
-    "\n"
+    "- ¿Podemos predecir el comportamiento de un material sin experimentar con el?\n",
+    "- ¿Existen grupos de materiales con características similares?\n",
+    "- ¿Podemos encontrar materiales extraños, por ejemplo, material mágnetico que no sea metálico? \n",
+    "- ¿Podemos identificar una caracteristica que influya en lo bueno que puede ser un conductor?\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- ¿Existen grupos de materiales con características similares?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para responder esta pregunta, es directo usar clustering. Se puede probar con DBSCAN o K-means. Luego, una pregunta interesante es ver que característica es mas decididora para determinar la pertenencia de un punto a un clustering. Por ejemplo, si ploteamos los puntos con colores que dependen del valor de un atributo, y este color es muy intenso dentro de un cluster en particular, no sería descabellado pensar que esta característica influye bastante en este material y sus características."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "- ¿Podemos identificar una caracteristica que influya en lo bueno que puede ser un conductor?\n",
+    "\n",
+    "\n",
+    "\n",
+    "Primero, vamos a filtrar a todos los conductores usando el atributo band_gap  = 0 , esto pues se sabe que todos los conductores tienen este valor. Los semiconductores tienen un bandgap > 0 y los aislantes tienen band gap mucho mas grande. La siguiente imagen ejemplifica un material con band gap = 0 . \n",
+    "\n",
+    "Notar como en el grafico de la derecha, que muestra la densidad de estados, no hay saltos en la función de color rojo.\n",
+    "\n",
+    "![Material con band gap = 0](band_gap1.png)\n",
+    "\n",
+    "El siguiente material tiene un band gap distinto de cero, osea, los electrones necesitan un \"empujoncito\" para pasar de un estado ligado al estado libre de un conductor. Este empujoncito se puede conseguir con una diferencia de potencial o con el efecto túnel. Aquí la función roja no es contínua en todo el espacio, especificamente alrededor de 0.\n",
+    "\n",
+    "![Material con band gap != 0](bandgap2.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luego, debido a que no tenemos labels, clasificar no tendría sentido. Por esta razón , se realizará un clustering.\n",
+    "\n",
+    "Primero, se probará con k-means . Para inspeccionar la cantidad idónea de clusters, primero se realizará la técnica del codo.\n",
+    "\n",
+    "Con la cantidad de clusters obtenida, se realizará k-means. \n",
+    "\n",
+    "También se probará con DBSCAN. La intuición física nos dice que no servirá mucho, pues la densidad de puntos no debería ser un factor de clasificación.\n",
+    "\n",
+    "El cluster que nos interesa es el jerárquico, pues queremos indentificar que tan buenos son los conductores. Queremos identificar alguna característica que tenga un gradiente que coincida con la forma en la que se agrupan los clusters. Una forma de visualizar esto sería algo como esto:\n",
+    "\n",
+    "![EJEMPLO_CLUSTER](CLUSTER.png)\n",
+    "\n",
+    "Notar como los puntos se vuelven mas rojos a medida que nos acercamos al centro, una especie de gradiente hacia el centro nos podría indicar que esta característica influye directamente en lo bueno (o malo) que es un conductor. Se utilizará PCA para dimensionar a un gráfico.\n",
+    "\n",
+    "Posteriormente se realizará una validación de los métodos de clustering e intentaremos identificar alguna característica o estructura interesante."
+   ]
   },
   {
    "cell_type": "markdown",
