--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1351,10 +1351,11 @@
    "metadata": {},
    "source": [
     "# Inquietudes a responder\n",
-    "- ¿Podemos predecir el comportamiento de un material sin experimentar con el?\n",
     "- ¿Existen grupos de materiales con características similares?\n",
     "- ¿Podemos encontrar materiales extraños, por ejemplo, material mágnetico que no sea metálico? \n",
-    "- ¿Podemos identificar una caracteristica que influya en lo bueno que puede ser un conductor?\n"
+    "- ¿Podemos identificar una caracteristica que influya en lo bueno que puede ser un conductor?\n",
+    "\n",
+    "A continuación se mostrará una estrategia para hacer cada experimento e intentar responder las preguntas.\n"
    ]
   },
   {
@@ -1368,7 +1369,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para responder esta pregunta, es directo usar clustering. Se puede probar con DBSCAN o K-means. Luego, una pregunta interesante es ver que característica es mas decididora para determinar la pertenencia de un punto a un clustering. Por ejemplo, si ploteamos los puntos con colores que dependen del valor de un atributo, y este color es muy intenso dentro de un cluster en particular, no sería descabellado pensar que esta característica influye bastante en este material y sus características."
+    "Al no tener labels, es directo que se va a usar clustering. Se probará con DBSCAN, con K-means y jerárquico.\n",
+    "\n",
+    "Para el caso de k-means, se utilizará el método del codo.\n",
+    "\n",
+    "DBSCAN no debería ser útil, debido a que aglomera usando las densidades, cosa que , por intuición fisica, no debería influir en el tipo de material, pero de todas maneras se realizará este análisis.\n",
+    "\n",
+    "\n",
+    "El clustering jerárquico también nos podría entregar un resultado interesante, ya que podrian haber subconjuntos de materiales.\n",
+    "\n",
+    "Luego, una pregunta interesante es ver que característica es mas decididora para determinar la pertenencia de un punto a un clustering. Por ejemplo, si ploteamos los puntos con colores que dependen del valor de un atributo, y este color es muy intenso dentro de un cluster en particular, no sería descabellado pensar que esta característica influye bastante en este material y sus características."
    ]
   },
   {
@@ -1398,7 +1408,7 @@
    "source": [
     "Luego, debido a que no tenemos labels, clasificar no tendría sentido. Por esta razón , se realizará un clustering.\n",
     "\n",
-    "Primero, se probará con k-means . Para inspeccionar la cantidad idónea de clusters, primero se realizará la técnica del codo.\n",
+    "Primero, se probará con k-means . Para inspeccionar la cantidad idónea de clusters, se realizará la técnica del codo.\n",
     "\n",
     "Con la cantidad de clusters obtenida, se realizará k-means. \n",
     "\n",
@@ -1435,7 +1445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4
  },
