--- a/Reporte.ipynb
+++ b/Reporte.ipynb
@@ -630,7 +630,6 @@
    "metadata": {},
    "source": [
     "# Inquietudes a responder\n",
-    "- ¿Podemos predecir el comportamiento de un material sin experimentar con el?\n",
     "- ¿Existen grupos de materiales con características similares?\n",
     "- ¿Podemos encontrar materiales extraños, por ejemplo, material mágnetico que no sea metálico? \n",
     "- ¿Podemos identificar una caracteristica que influya en lo bueno que puede ser un conductor?\n"
@@ -647,7 +646,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para responder esta pregunta, es directo usar clustering. Se puede probar con DBSCAN o K-means. Luego, una pregunta interesante es ver que característica es mas decididora para determinar la pertenencia de un punto a un clustering. Por ejemplo, si ploteamos los puntos con colores que dependen del valor de un atributo, y este color es muy intenso dentro de un cluster en particular, no sería descabellado pensar que esta característica influye bastante en este material y sus características."
+    "Al no tener labels, es directo que se va a usar clustering. Se probará con DBSCAN, con K-means y jerárquico.\n",
+    "\n",
+    "Para el caso de k-means, se utilizará el método del codo.\n",
+    "\n",
+    "DBSCAN no debería ser útil, debido a que aglomera usando las densidades, cosa que , por intuición fisica, no debería influir en el tipo de material, pero de todas maneras se realizará este análisis.\n",
+    "\n",
+    "\n",
+    "El clustering jerárquico también nos podría entregar un resultado interesante, ya que podrian haber subconjuntos de materiales.\n",
+    "\n",
+    "Luego, una pregunta interesante es ver que característica es mas decididora para determinar la pertenencia de un punto a un clustering. Por ejemplo, si ploteamos los puntos con colores que dependen del valor de un atributo, y este color es muy intenso dentro de un cluster en particular, no sería descabellado pensar que esta característica influye bastante en este material y sus características."
    ]
   },
   {
