--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1414,7 +1414,7 @@
     "\n",
     "También se probará con DBSCAN. La intuición física nos dice que no servirá mucho, pues la densidad de puntos no debería ser un factor de clasificación.\n",
     "\n",
-    "El cluster que nos interesa es el jerárquico, pues queremos indentificar que tan buenos son los conductores. Queremos identificar alguna característica que tenga un gradiente que coincida con la forma en la que se agrupan los clusters. Una forma de visualizar esto sería algo como esto:\n",
+    "El cluster que nos interesa es el jerárquico, pues queremos indentificar que tan buenos son los conductores. Queremos identificar alguna característica que tenga un gradiente que coincida con la forma en la que se agrupan los clusters. Una forma de visualizar esto sería algo como la siguiente figura:\n",
     "\n",
     "![EJEMPLO_CLUSTER](CLUSTER.png)\n",
     "\n",
